--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -5,9 +5,6 @@
 #header a {
   color: #fafafa;
 }
-#header button {
-  color: #fafafa;
-}
 #header-img {
   background-image: url("../img/background2.png");
   background-repeat: no-repeat;
@@ -49,6 +46,7 @@
   background-color: #33c17a;
   color: #fafafa;
   position: fixed;
+  z-index: 1;
   bottom: 25px;
   right: 25px;
   border: none;
